--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
   iconsax: ^0.0.8
   #---State Management---#
   get: ^4.6.6
+  get_storage: ^2.1.1
+  #---Utility packages---#
+  http: ^1.2.2
+  intl: ^0.19.0
+  logger: ^2.4.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
