--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.19.0
   logger: ^2.4.0
   url_launcher: ^6.3.0
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
