Onboarding steps done and now working on login screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   logger: ^2.4.0
   url_launcher: ^6.3.0
   flutter_native_splash: ^2.4.1
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
@@ -31,7 +32,7 @@ flutter:
   assets:
     - assets/logos/
     - assets/icons/
-    - assets/images/
+    - assets/images/on_boarding_images/
   #---Local Fonts---#
   fonts:
     - family: Poppins
